@@ -4,13 +4,13 @@ Hash: SHA1
 DIST rkward-0.4.9a.tar.gz 1729709 RMD160 a02094a7ffb5426e010cf3af4620f856a0f8f86d SHA1 dde67a14414d346d0cd273d450b1e2d3acb945d2 SHA256 1e8b7fde19fc4a60b9e375e428ee9e1a2fffaa426114ad30d66c039f78d82051
 DIST rkward-0.5.0b.tar.gz 877187 RMD160 b878154368133d8e7450130e0f85a59f0ce16e05 SHA1 2e09dab483102e3ecf708047a6301b85d5ae9ec4 SHA256 ca8bb3a5fa319963ea0398ecf4f1aa147cb7065860e9bac8546aad1fc9f1d1a2
 EBUILD rkward-0.4.9a.ebuild 789 RMD160 05282a75d92d506be0e7ee6e4e10a041ed402abc SHA1 34e620b22b1210b162ae540bc66bf3b50a72aab6 SHA256 25b6ec549964cafc78427529080bdd5a072f95cff6e0c446000d4a890313797e
-EBUILD rkward-0.5.0b.ebuild 702 RMD160 a1d644b81a360f9d3142054bfc3a02a567445e39 SHA1 02aefdb784a7542b2a3463a5d78364a6c8caff93 SHA256 ffb1caeb74cdc19838719d666e531e2faa5b00358a75c1423196f2b2f9114fb2
-MISC ChangeLog 2332 RMD160 a3a806b0f40674e1710e8c13ed61307306c4285a SHA1 724e4a52f6f9cbb8fe3f16dc860493fd117a9c4e SHA256 f1710f1416c2ed9ca6c3dfc9288a67f1c5e5b72e436567df3acf37edba25a419
+EBUILD rkward-0.5.0b.ebuild 874 RMD160 2efefbf0f03282887782f243b41d2ff565a6bc13 SHA1 829000363912a77b16cd9937cd2eb9dece588924 SHA256 8e43fdb48efdd8235282d610ff6a5ff04313a14be9db10c3335dac1452cb515b
+MISC ChangeLog 2483 RMD160 b6110f089374fe6bed48056a4edbf7f87b11d5db SHA1 947324b7b88a19736afd0fa6401b88b535994846 SHA256 8d5b87119b2aad1e386ea7fe17f079f9999de886c7f73c0bcc96c0e2ae040daa
 MISC metadata.xml 403 RMD160 f10e8b77a455809d2e221f136bdbfec565d0c8e8 SHA1 7a5b826b7938ae37b6c3545ea97bec239aae16b5 SHA256 840a30b774c00d0e7b34fd56a9f8eab3a1698b598f42aa13f1cc401400624120
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkj96MIACgkQ1ycZbhPLE2BoHACfbYUwTM9TBaqxpG3XFRosc/Qo
-R+kAoJEJ0lqJM9X/oglKBAJk4l2AK7qm
-=sctL
+iEYEARECAAYFAklvadAACgkQ1ycZbhPLE2D1fACfQce7L6oV3vfsClKO/e5wmJvg
+AJwAnRHTLwYkQLVrMcD1lyKfG/QeI51v
+=AOZo
 -----END PGP SIGNATURE-----
