@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/rkward
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/rkward/ChangeLog,v 1.13 2008/10/21 14:35:35 bicatali Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-mathematics/cvs-repo/gentoo-x86/sci-mathematics/rkward/ChangeLog,v 1.14 2009/01/15 16:52:23 bicatali Exp $
+
+  15 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> rkward-0.5.0b.ebuild:
+  Fixed a missing header, thanks to Markos Chandras, closing bug #252580
 
 *rkward-0.5.0b (21 Oct 2008)
 
